fix layout bug for chrome & safari

--- a/src/scss/flex-gallery.scss
+++ b/src/scss/flex-gallery.scss
@@ -18,7 +18,7 @@
 }
 
 .gallery-item {
-    flex: 1 1 auto;
+    flex-grow: 1;
     margin: vars.$gallery-item-margin;
     height: vars.$gallery-item-height;
     position: relative;
@@ -80,10 +80,9 @@
 
     .thumb {
         display: inline-block;
-        width: 100%;
-        height: 100%;
+        max-height: 100%;
+        min-width: 100%;
         object-fit: cover;
-        min-height: unset;
         text-align: center;
         background-color: vars.$gallery-item-thumb-bg-color;
         transition: filter 500ms, transform 500ms;
